c-sub/test/test_lexical.c

// This file is a part of MRNIU/SimpleCompiler (https://github.com/MRNIU/SimpleCompiler).
//
// test_lexical.c for MRNIU/SimpleCompiler.

// right
// keywords
int
char
void
if
else
while
for
break
continue
return

// identifier
adffadf fdafa232
fa_efa _fwf2_

// operator
+
-
*
/
=
==
&
&&
|
||
^
!
!=
>
<
>=
<=
&& | || ^ ! != >

// separator
(
)
{
}
,
:
;

// error
// keywords
int2
charvoid
if3 else2
whilefor

// identifier
2ddd 0312dsfs

// operator
+|
-d
*_
//
|=
+=
&c
&& c| |\n| s^
++
--

// separator
\n(
s)
{ s}
[
]
